testsuite/poke.pkl/label-diag-1.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int i @
          3; /* { dg-error "invalid field label\n.*expected offset" } */
  };
